<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:baselineAligned="false"     
    android:weightSum="3"
    android:paddingTop="@dimen/activity_vertical_margin"       
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="horizontal" >
    
    <LinearLayout 
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="2"
    	android:orientation="vertical">
    	
        <TextView	
	        android:id="@+id/tvPlaceView"        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:text="@string/meetingPlace"	                
	        android:textColor="@android:color/black"
	        android:textSize="20sp"/>
        
        <LinearLayout 
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"		    
		    android:layout_gravity="start"			    
		    android:orientation="horizontal">
	
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"		        
		        android:orientation="vertical" >
		        
		        <TextView			               
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"		        
			        android:textColor="#585858"
			        android:text="@string/latitude"
			        android:textSize="16sp"/>
		        
		        <TextView			               
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"		        
			        android:textColor="#585858"
			        android:text="@string/longitude"
			        android:textSize="16sp"/>
		        
		        <TextView			               
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"		        
			        android:textColor="#585858"
			        android:text="@string/date"
			        android:textSize="16sp"/>
		        
		        <TextView			               
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"		        
			        android:textColor="#585858"
			        android:text="@string/time"
			        android:textSize="16sp"/>
		        
	        </LinearLayout>
	        
	        <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:orientation="vertical" >
		
		        <TextView
		            android:id="@+id/tvLatitudeView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"	            
		            android:text="@string/latitude"
		            android:textColor="#585858"
		            android:textSize="16sp" />
		
		        <TextView
		            android:id="@+id/tvLongitudeView"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"	            
		            android:text="@string/longitude"
		            android:textColor="#585858"
		            android:textSize="16sp" />
		        
		        <TextView	
			        android:id="@+id/tvDateView"        
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"		        	        
			        android:textColor="#585858"
			        android:text="@string/date"
			        android:textSize="16sp"/>
		        
		        <TextView	
			        android:id="@+id/tvTimeView"         
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"			        	        
			        android:textColor="#585858"
			        android:text="@string/time"
			        android:textSize="16sp"/>
		        
		    </LinearLayout>
	    
        </LinearLayout>  
        
        <TextView	
	        android:id="@+id/tvDistenceView"        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        	  
	        android:text="@string/distence"              
	        android:textColor="@android:color/black"
	        android:textSize="20sp"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="0dp"
    	android:layout_height="match_parent"    	
    	android:layout_weight="1"
    	android:orientation="vertical">
    	
        <ImageView
	        android:id="@+id/viewImageView"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
   	        android:src="@drawable/ic_launcher"
	        android:layout_marginTop="5dp"
	        android:contentDescription="@string/load"/>
        
    </LinearLayout>
    
   
</LinearLayout>


