
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@android:color/background_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    tools:context="com.ftfl.photoviewer.TakePhotoActivity">

    <LinearLayout 
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:orientation="vertical"
		  android:gravity="center"		 
		  android:paddingBottom="@dimen/activity_vertical_margin"
		  android:paddingLeft="@dimen/activity_horizontal_margin"
		  android:paddingRight="@dimen/activity_horizontal_margin"
		  android:paddingTop="@dimen/activity_vertical_margin" >
		  
        <ImageView
	         android:id="@+id/imgView"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_margin="10dp"
	         android:padding="10dp"
	         android:background="@drawable/pic_brdr"
	         android:contentDescription="@string/load" />
	    
	    <Button
	        android:id="@+id/btnTakePhoto"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	        
	        android:background="@drawable/rounded_blue"        
	        android:layout_gravity="center"
		    android:padding="20dp"
	        android:layout_marginTop="40dp"
	        android:textColor="@android:color/primary_text_dark"  
	        android:text="@string/btnTakePhoto" />
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="40dp"
		    android:layout_gravity="start"
		    android:orientation="horizontal">
		    
	        <TextView			               
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"		        
		        android:textColor="@android:color/primary_text_dark"
		        android:text="@string/latitude"
		        android:textSize="20sp"/>
	        
		    <TextView	
		        android:id="@+id/tvLatitude"        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"	
		        android:layout_marginLeft="10dp"	        
		        android:textColor="@android:color/holo_blue_dark"
		        android:text="@string/latitude"
		        android:textSize="20sp"/>
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:layout_gravity="start"
		    android:orientation="horizontal">
		    
	        <TextView			               
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"		        
		        android:textColor="@android:color/primary_text_dark"
		        android:text="@string/longitude"
		        android:textSize="20sp"/>
	        
		    <TextView	
		        android:id="@+id/tvLongitude"        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"	
		        android:layout_marginLeft="10dp"	        
		        android:textColor="@android:color/holo_blue_dark"
		        android:text="@string/longitude"
		        android:textSize="20sp"/>
		    
	    </LinearLayout>	 
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:layout_gravity="start"
		    android:orientation="horizontal">
		    
	        <TextView			               
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"		        
		        android:textColor="@android:color/primary_text_dark"
		        android:text="@string/date"
		        android:textSize="20sp"/>
	        
		    <TextView	
		        android:id="@+id/tvDate"        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"	
		        android:layout_marginLeft="10dp"	        
		        android:textColor="@android:color/holo_blue_dark"
		        android:text="@string/date"
		        android:textSize="20sp"/>
		    
	    </LinearLayout>	 
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:layout_gravity="start"
		    android:orientation="horizontal">
		    
	        <TextView			               
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"		        
		        android:textColor="@android:color/primary_text_dark"
		        android:text="@string/time"
		        android:textSize="20sp"/>
	        
		    <TextView	
		        android:id="@+id/tvTime"         
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"	
		        android:layout_marginLeft="10dp"	        
		        android:textColor="@android:color/holo_blue_dark"
		        android:text="@string/time"
		        android:textSize="20sp"/>
		    
	    </LinearLayout>	 
	    
	    
	    <TextView	             
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="40dp"	        
	        android:layout_gravity="start"
	        android:text="@string/meetingPlace"
	        android:textColor="@android:color/primary_text_dark"
	        android:textSize="20sp"/>
	    
	    <EditText
	        android:id="@+id/editRemarks"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp"	
	        android:layout_gravity="center"
	        android:layout_marginTop="10dp"	       
	        android:background="@drawable/rounded_blue"     
	        android:ems="10"
	        android:textColor="@android:color/black" 
	        android:hint="@string/editRemarks"
	        android:inputType="textMultiLine" >
	        <requestFocus />
	    </EditText>
	    
	    <Button
	        android:id="@+id/btnSave"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"        
	        android:background="@drawable/rounded_blue"  
	        android:drawableLeft="@drawable/save"      
	        android:layout_gravity="center"
	        android:layout_marginTop="60dp"
		    android:paddingTop="20dp"
		    android:paddingBottom="20dp"
		    android:paddingLeft="40dp"
		    android:paddingRight="40dp"
	        android:textColor="@android:color/primary_text_dark" 
	        android:text="@string/btnSave" />
	

    </LinearLayout>
</ScrollView>

    