<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"    
    android:background="@android:color/background_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ftfl.atm.ViewProfileActivity" >
    
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"                  
        android:orientation="vertical">

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        	       
	        android:text="@string/currentLocation"
	        android:textColor="@android:color/primary_text_dark"
	        android:textSize="24sp" />	    
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/tvCurrentLatitudeView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"	            
	            android:text="@string/latitude"
	            android:textColor="@android:color/holo_blue_dark"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/tvCurrentLongitudeView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:text="@string/longitude"
	            android:textColor="@android:color/holo_blue_dark"
	            android:textSize="20sp" />
	        
	    </LinearLayout>
	    
    </LinearLayout>
	    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
	
	    <ListView
	        android:id="@+id/lv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	        
	        android:background="#20DCDCDC" />
	    
    </LinearLayout>
    
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"        
        android:gravity="center"           
        android:orientation="vertical" >    

	    <Button
	        android:id="@+id/btnHome"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/rounded_blue"
	        android:drawableLeft="@drawable/home"	        
	        android:paddingTop="20dp"
		    android:paddingBottom="20dp"
		    android:paddingLeft="40dp"
		    android:paddingRight="40dp"
	        android:text="@string/btnHome"
	        android:textColor="@android:color/primary_text_dark" />
    
    </LinearLayout>

</LinearLayout>